[Refactor] : 문자열 상수 추출
#14 해결중